Fixed login form overflow issue on mobile screens

--- a/miryoku-front-end/public/styles/_auth.scss
+++ b/miryoku-front-end/public/styles/_auth.scss
@@ -15,8 +15,7 @@
 
     padding: 1em 3em 1em 3em;
     padding-right: 4em;
-
-    min-width: 12em;
+    
     max-width: 80vw;
     
     display: flex;
@@ -30,67 +29,12 @@
     padding: 0em;
 }
 
-$primary: #11998e;
-$secondary: #38ef7d;
-$white: #000000;
-$gray: #9b9b9b;
-.form__group {
-  position: relative;
-  padding: 15px 0 0;
-  margin-top: 10px;
-  width: 100%;
+.auth-field {
+  border-radius: 5px;
+  padding: 1em;
+  font-family: "Barlow";
 }
 
-.form__field {
-  font-family: inherit;
-  width: 100%;
-  border: 0;
-  border-bottom: 2px solid $gray;
-  outline: 0;
-  font-size: 1.3rem;
-  color: $white;
-  padding: 7px 0;
-  background: transparent;
-  transition: border-color 0.2s;
-
-  &::placeholder {
-    color: transparent;
-  }
-
-  &:placeholder-shown ~ .form__label {
-    font-size: 1.3rem;
-    cursor: text;
-    top: 20px;
-  }
-}
-
-.form__label {
-  position: absolute;
-  top: 0;
-  display: block;
-  transition: 0.2s;
-  font-size: 1rem;
-  color: $gray;
-}
-
-.form__field:focus {
-  ~ .form__label {
-    position: absolute;
-    top: 0;
-    display: block;
-    transition: 0.2s;
-    font-size: 1rem;
-    color: $primary;
-    font-weight:700;    
-  }
-  padding-bottom: 6px;  
-  font-weight: 700;
-  border-width: 3px;
-  border-image: linear-gradient(to right, $primary,$secondary);
-  border-image-slice: 1;
-
-}
-/* reset input */
-.form__field{
-  &:required,&:invalid { box-shadow:none; }
+.auth-field-label {
+  margin-bottom: 0.5em;
 }
